--- a/chinaVisall.html
+++ b/chinaVisall.html
@@ -59,6 +59,7 @@
 				<div id="rightcav">
 					
 				</div> -->
+				<!-- challenge new file -->
 			</div>
 			<div id="buju5">
 				<b style="color: white;">多媒体数据展示</b>
